--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -31,3 +31,65 @@ body {
     text-wrap: balance;
   }
 } */
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #CCC5B7;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #555;
+}
+
+input[type="text"] {
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+button[type="button"] {
+  background-color: #28a745;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
+p {
+  color: #d9534f;
+  text-align: center;
+}
+
+body {
+  background-color: #fff;
+}
