--- a/frontend/src/app/Components/Nav/Nav.css
+++ b/frontend/src/app/Components/Nav/Nav.css
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap');
 .nav {
 
     position: fixed;
@@ -78,7 +78,7 @@ wui-connect-button button {
     font-size: 32px;
     font-weight: 900;
     color: #0d0a0a;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif !important;
     text-transform: uppercase;
     letter-spacing: 3px;
     position: relative;
