--- a/frontend/src/app/Bet/styles.css
+++ b/frontend/src/app/Bet/styles.css
@@ -96,4 +96,7 @@
 
 .buttonx {
     display: flex;
+    justify-content: center; /* Centers content horizontally */
+    align-items: center;
+    max-height: 100px;
 }
