--- a/frontend/src/app/styles.css
+++ b/frontend/src/app/styles.css
@@ -146,4 +146,14 @@
         font-size: 1.2rem;
     }
   }
+  .ephi{
+    padding-left: 250px;
+  }
   
+  /* pre {
+    background-color: #f5f5f5;
+    padding: 15px;
+    border-radius: 5px;
+    overflow-x: auto;
+    font-family: 'Courier New', Courier, monospace;
+} */
